# BiztonsagokCAFFShop

./: README.md
Backend/: build.gradle  pom.xml  settings.gradle
Backend/native/: settings.gradle
Backend/native/src/main/cpp/: CAFFparser.cpp  CIFFparser.cpp  com_narcano_jni_CaffParser.cpp  utils.cpp
Backend/native/src/main/headers/: CAFFparser.h  CIFFparser.h  com_narcano_jni_CaffParser.h
Backend/src/main/resources/: application.properties
Backend/src/main/resources/keystore/: BiztonsagokStore.p12
Docs/: SystemArchitecture.drawio  SystemBoundaries.drawio
Frontend/caff-shop/: package-lock.json  package.json
Frontend/caff-shop/public/: index.html
Frontend/caff-shop/src/: App.js  config.js  index.js
Frontend/caff-shop/src/_helpers/: fetch-wrapper.js
Frontend/caff-shop/src/_store/: auth.slice.js  caff.slice.js  index.js  jwtRefreshMiddleware.js  users.slice.js
Frontend/caff-shop/src/assets/scss/: _themes-vars.module.scss
Frontend/caff-shop/src/css/: login.css
Frontend/caff-shop/src/menu-items/: auth.js  features.js  index.js  profile.js  utilities.js
Frontend/caff-shop/src/pages/: dashboard.js  hello.js  login.js  registration.js
Frontend/caff-shop/src/routes/: MainRoutes.js
Frontend/caff-shop/src/store/: index.js  reducer.js
Frontend/caff-shop/src/ui-component/: Canvas.js  PrivateRoute.jsx  ViewFile.js
Parser/: CMakeLists.txt  README.md
Parser/src/: main.cpp
Parser/src/model/: CAFF.h  CIFF.h  pixel.h
Parser/src/parsers/: CAFFparser.cpp  CAFFparser.h  CIFFparser.cpp  CIFFparser.h
Parser/src/utils/: utils.cpp  utils.h
(+93 files in other folders)
